Change to use new method of mod publishing Fix source jars not including resource files Bump mod version
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,12 @@ jobs:
       - uses: olegtarasov/get-tag@v2.1
         id: tagName
 
+      # Parse tag name out to version number
+      - id: vers
+        run: |
+          num=$(echo ${{ steps.tagName.outputs.tag }} | cut -dv -f2)
+          echo "::set-output name=num::$num"
+
       # Checkout repository & Setup JDK
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
@@ -76,28 +82,34 @@ jobs:
 
       # Generate Minecraft Assets & Data files
       - run: ./gradlew Data # `Data` should match the `runData` gradle task name
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Build package
       - run: ./gradlew build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE: ${{ steps.tagName.outputs.tag }}
 
       # Publish to GitHub Packages
       - run: ./gradlew publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           APEX_MODS_MAVEN_USERNAME: ${{ secrets.APEX_MODS_MAVEN_USERNAME }}
           APEX_MODS_MAVEN_PASSWORD: ${{ secrets.APEX_MODS_MAVEN_PASSWORD }}
-          RELEASE: ${{ steps.tagName.outputs.tag }}
 
-      # Publish to CurseForge
-      - run: ./gradlew curseforge
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
+#      # Use 'Publish Minecraft Mods' action to publish to various mod hosting sources
+#      - uses: Kir-Antipov/mc-publish@v2.1
+#        with:
+#          modrinth-id: hPeyEJEZ
+#          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+#
+#          curseforge-id: 573867
+#          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+#
+#          name: FantasyFurniture-1.16.5-${{ steps.vers.outputs.num }}
+#          version: ${{ steps.vers.outputs.num }}
+#          version-type: release
+#          loaders: forge
+#          game-versions: 1.16.5
+#          java: 8
+#          files: ''
+#          files-primary: build/libs/!(*-@(deobf|slim|sources)).jar
+#          files-secondary: build/libs/*-@(deobf|slim|sources).jar
 
       # Kill gradlew deamon (caching requires gradle to not be running)
       - run: ./gradlew --stop
