--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,27 +20,42 @@ issueTrackerURL="https://github.com/ApexModder/FantasyFurniture/issues"
 	versionRange="${forge_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.${mod_id}.custom.mc-publish]
+		ignore=true
 [[dependencies.${mod_id}]]
 	modId="minecraft"
 	mandatory=true
 	versionRange="${minecraft_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.${mod_id}.custom.mc-publish]
+		ignore=true
 [[dependencies.${mod_id}]]
 	modId="${registrator_mod_id}"
 	mandatory=true
 	versionRange="${registrator_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.${mod_id}.custom.mc-publish]
+		ignore=false
+		modrinth="${registrator_mod_id}"
+		curseforge="${registrator_mod_id}"
 [[dependencies.${mod_id}]]
 	modId="${apexcore_mod_id}"
 	mandatory=true
 	versionRange="${apexcore_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.${mod_id}.custom.mc-publish]
+		ignore=false
+		modrinth="${apexcore_mod_id}"
+		curseforge="${apexcore_mod_id}"
 [[dependencies.${mod_id}]]
 	modId="${jei_mod_id}"
 	mandatory=false
 	versionRange="${jei_version_range}"
 	ordering="AFTER"
 	side="BOTH"
+	[dependencies.${mod_id}.custom.mc-publish]
+		ignore=false
+		curseforge="${jei_mod_id}"
