Disable mixin debug & hotswapping
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -178,9 +178,9 @@ mixin {
 	setupModMixins('Registrator', consumer)
 	setupModMixins('ApexCore', consumer)
 
-	debug = true
+	/*debug = true
 	debug.export = true
-	hotSwap = true
+	hotSwap = true*/
 }
 
 sourceSets.main.resources {
