Add missing reobf jar build script lines Potential fix for GitHub actions compiling broken mod jars (https://github.com/ApexModder/FantasyTable/issues/3) Bump mod versions
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -224,6 +224,9 @@ reobf {
 	shadowJar { }
 }
 
+build.dependsOn shadowJar
+build.dependsOn reobfShadowJar
+
 jar.finalizedBy('reobfJar')
 
 if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS_MAVEN_PASSWORD') != null) {
