--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,6 @@ mod_name=Fantasy's Furniture
 mod_version=1.0.0
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
+# mod_release_type=release
+# mod_curseforge_id=550778
+# mod_modrinth_id=xl3myxch
