Update to use new mods-maven url
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ repositories {
 	mavenCentral()
 	maven { url 'https://dvs1.progwml6.com/files/maven' }
 	maven { url 'https://maven.tterrag.com/' }
-	maven { url 'https://apexmodder.jfrog.io/artifactory/mods-maven/' }
+	maven { url 'https://maven.apexmods.xyz/' }
 }
 
 dependencies {
@@ -248,7 +248,7 @@ if(System.getenv('APEX_MODS_MAVEN_USERNAME') != null && System.getenv('APEX_MODS
 		repositories {
 			maven {
 				name 'ApexMods-Maven'
-				url 'https://apexmodder.jfrog.io/artifactory/mods-maven/'
+				url 'https://maven.apexmods.xyz/'
 
 				credentials {
 					username System.getenv('APEX_MODS_MAVEN_USERNAME')
