--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,8 @@ jobs:
 
     steps:
       # Checkout repository & Setup JDK
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@
+      - run: git fetch --prune --unshallow
       - uses: actions/setup-java@v2
         with:
           distribution: adopt
