--- a/build.gradle
+++ b/build.gradle
@@ -240,9 +240,14 @@ tasks.withType(Jar) {
 				'Implementation-Title': "${mod_name}",
 				'Implementation-Version': "${project.version}",
 				'Implementation-Vendor' : "${mod_authors}",
-				'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-				'MixinConfigs': "${mod_id}.mixins.json"
+				'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
 		])
+	}
+
+	if(file("./src/main/resources/${mod_id}.mixins.json").exists()) {
+		manifest {
+			attributes 'MixinConfigs': "${mod_id}.mixins.json"
+		}
 	}
 }
 
