--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ mod_authors=Apex, FantasyGaming
 # mod_release_type=release
 # mod_curseforge_id=550778
 # mod_modrinth_id=xl3myxch
+mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
