--- a/build.gradle
+++ b/build.gradle
@@ -200,26 +200,28 @@ artifacts {
 	archives shadowJar
 }
 
-def previousGitTag = { ->
-	def code = new ByteArrayOutputStream()
+if(System.getenv('GENERATE_CHANGELOG') != null) {
+    def previousGitTag = { ->
+        def code = new ByteArrayOutputStream()
 
-	exec {
-		commandLine 'git', 'describe', '--tags', '--match', 'v*', '--exclude', "v${mod_version}"
-		standardOutput code
-	}
+        exec {
+            commandLine 'git', 'describe', '--tags', '--match', 'v*', '--exclude', "v${mod_version}"
+            standardOutput code
+        }
 
-	return code.toString().trim().split('-')[0]
-}
+        return code.toString().trim().split('-')[0]
+    }
 
-task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
-	file = file("CHANGELOG.md")
-	fromRepo = file('.')
-	fromRef = "${previousGitTag}"
-	// toRef = "v${mod_version}"
-	templateContent = file('.github/changelog.mustache').text
-			.replace('{mod_version}', "${mod_version}")
-			.replace('{mod_name}', "${mod_name}")
-			.replace('{last_tag}', "${previousGitTag}")
+    task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
+        file = file("CHANGELOG.md")
+        fromRepo = file('.')
+        fromRef = "${previousGitTag}"
+        toRef = "v${mod_version}"
+        templateContent = file('.github/changelog.mustache').text
+		        .replace('{mod_version}', "${mod_version}")
+		        .replace('{mod_git_url}', "${mod_git_url}")
+		        .replace('{last_tag}', "${previousGitTag}")
+    }
 }
 
 tasks.withType(Jar) {
