Fix Changelog generation crashing due to first run (no git tags)
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -201,7 +201,7 @@ artifacts {
 }
 
 if(System.getenv('GENERATE_CHANGELOG') != null) {
-    def previousGitTag = { ->
+    /*def previousGitTag = { ->
         def code = new ByteArrayOutputStream()
 
         exec {
@@ -210,7 +210,9 @@ if(System.getenv('GENERATE_CHANGELOG') != null) {
         }
 
         return code.toString().trim().split('-')[0]
-    }
+    }*/
+
+	def previousGitTag = ''
 
     task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
         file = file("CHANGELOG.md")
