--- a/build.gradle
+++ b/build.gradle
@@ -201,7 +201,7 @@ artifacts {
 }
 
 if(System.getenv('GENERATE_CHANGELOG') != null) {
-    /*def previousGitTag = { ->
+    def previousGitTag = { ->
         def code = new ByteArrayOutputStream()
 
         exec {
@@ -210,14 +210,14 @@ if(System.getenv('GENERATE_CHANGELOG') != null) {
         }
 
         return code.toString().trim().split('-')[0]
-    }*/
+    }
 
-	def previousGitTag = ''
+	// def previousGitTag = ''
 
     task gitChangelogTask(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
         file = file("CHANGELOG.md")
         fromRepo = file('.')
-        fromRef = "${previousGitTag}"
+        fromRef = "${previousGitTag}-ALPHA" // TODO: Remove once we leave alpha
         toRef = "v${mod_version}"
         templateContent = file('.github/changelog.mustache').text
 		        .replace('{mod_version}', "${mod_version}")
