--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
-mod_version=0.1.2-ALPHA
+mod_version=0.2.0-BETA
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
-mod_release_type=alpha
+mod_release_type=beta
 mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
 mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
