Exclude BlockBench files from compiled Jar files
Signed-off-by: ApexModder <robsonlawson3@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -170,6 +170,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 task deobfJar(type: Jar) {
 	classifier 'deobf'
 	from sourceSets.main.output
+	exclude '**/*bbmodel'
 }
 
 jar {
@@ -177,12 +178,14 @@ jar {
 
 	from sourceSets.main.output.classesDirs
 	from sourceSets.main.output.resourcesDir
+	exclude '**/*bbmodel'
 }
 
 shadowJar {
 	classifier ''
 	configurations = [ project.configurations.shade ]
 	relocate "${registrate_package}", "xyz.apex.repack.${registrate_package}"
+	exclude '**/*bbmodel'
 
 	// we only want to remap class refrences imports etc
 	// and not shade in these into the mod jar
