--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 mod_id=fantasyfurniture
 mod_name=Fantasy's Furniture
-mod_version=0.2.0-BETA
+mod_version=1.0.0
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
 mod_release_type=beta
