--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ mod_name=Fantasy's Furniture
 mod_version=1.0.0
 mod_base_package=xyz.apex.forge
 mod_authors=Apex, FantasyGaming
-mod_release_type=beta
+mod_release_type=release
 mod_curseforge_id=579564
 mod_modrinth_id=A0nfCqYw
 mod_git_url=https://github.com/ApexStudios-Dev/FantasyFurniture
